--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>5.1.34</version>
         </dependency>
 
+        <!-- Stripe -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>12.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
