--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ jdbc.jndi.connection.name=java:comp/env/jdbc/TestDB
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
+STRIPE_SECRET_KEY=sk_test_tEuqBxOZbspLrvHXmf1r71Ve00VQHADuAM
