--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>5.1.34</version>
         </dependency>
 
+        <!-- BrainTree -->
+        <dependency>
+            <groupId>com.braintreepayments.gateway</groupId>
+            <artifactId>braintree-java</artifactId>
+            <version>2.98.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
