--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ jdbc.jndi.connection.name=java:comp/env/jdbc/TestDB
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
+BRAIN_TREE_MERCHANT_ID=fhkwzfs8pwdn3r2f
+BRAIN_TREE_PUBLIC_KEY=ksfd4txf4vs7yrsc
+BRAIN_TREE_PRIVATE_KEY=b30de665fe9e24870eb96e7b6ed5fd4b
