--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>5.1.34</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>html2pdf</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
