--- a/pom.xml
+++ b/pom.xml
@@ -69,10 +69,18 @@
             <version>5.1.34</version>
         </dependency>
 
+        <!-- itextPDF -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>html2pdf</artifactId>
             <version>2.1.0</version>
+        </dependency>
+
+        <!-- commons fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
         </dependency>
 
     </dependencies>
